# Qoder__VortexGPU_Unified

./: README.md  Vortex_GPU_Audio_Unified_Design.md
.github/workflows/: test.yml
.qoder/quests/: complete-development-and-testing.md  complete-testing.md  phase1-implementation-summary.md  vortex-gpu-audio-unified-design-review.md
vortex-gpu-audio/: EXECUTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  TEST_SUMMARY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
vortex-gpu-audio/benches/: performance_benchmarks.rs
vortex-gpu-audio/src/: main.test.ts  main.ts  style.css
vortex-gpu-audio/src-tauri/: Cargo.toml  tauri.conf.json
vortex-gpu-audio/src-tauri/src/: error.rs  gpu.rs  lockfree.rs  main.rs  validation.rs
vortex-gpu-audio/src-tauri/src/audio/: engine.rs  memory_pool.rs  mod.rs  processor.rs
vortex-gpu-audio/src-tauri/src/audio/dsp/: convolver.rs  dsd_processor.rs  eq_processor.rs  mod.rs  resampler.rs
vortex-gpu-audio/src-tauri/src/audio/filters/: biquad.rs  filter_chain.rs  mod.rs
vortex-gpu-audio/src-tauri/src/fileio/: format_detector.rs  loader.rs  metadata_extractor.rs  mod.rs  playlist_manager.rs
vortex-gpu-audio/src-tauri/src/network/: discovery.rs  mod.rs  output_manager.rs  protocol.rs  websocket.rs
vortex-gpu-audio/tests/common/: mod.rs
vortex-gpu-audio/tests/integration/: audio_engine_tests.rs  gpu_processing_tests.rs
