[package]
name = "vortex-gpu-audio"
version = "0.1.0"
description = "Vortex GPU Audio - Global Best Hi-Fi Audio Processing Engine"
authors = ["Vortex GPU Audio Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "config-json5", "shell-open"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
crossbeam = "0.8"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4"] }
# Audio processing
cpal = "0.15"
# Lock-free data structures
crossbeam-queue = "0.3"
# System info
num_cpus = "1.16"
# GPU abstraction (feature-gated)
# CUDA support will be added via feature flags

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[features]
default = []
cuda = []
opencl = []
vulkan = []

# Performance optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[[bench]]
name = "performance_benchmarks"
harness = false
